# CryptoStreamSpark

./: .gitignore  README.md  coin_spark.py  pyproject.toml  requirements.txt
spark_connection/: concurrent_coin_spark.py  streaming_connection.py
spark_connection/config/: setting.conf
spark_connection/schema/: coin_cal_query.py  data_constructure.py
src/: analysis_functions.py
src/config/: kafka_s.yml  properties.py  setting.conf
src/preprocess/: orderbook_functions.py  ticker_functions.py
src/schema/: abstruct_class.py  data_constructure.py  preprocess_schema.py
src/setting/: coin_cal_query.py  streaming_connection.py
src/storage/: mysql_sink.py
