[tool.poetry]
name = "propertydatasparksync"
version = "0.1.0"
description = ""
authors = ["skip"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.1.0"
numpy = "^1.25.2"
scikit-learn = "^1.3.0"
pyspark = "3.3.0"
confluent-kafka = "^2.2.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
fastapi = "^0.103.1"
pydantic = "^2.3.0"
websocket = "^0.2.1"
websocket-client = "^1.6.3"
aiokafka = "^0.8.1"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
