[tool.poetry]
name = "cryptostreamspark"
version = "0.1.0"
description = ""
authors = ["skip"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.6"
requests = "^2.32.3"
pandas = "^2.2.3"
numpy = "^2.1.1"
pyspark = "3.3.0"
yml = "^0.0.1"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
